MODIFY overflow fixed and swiper responsive fix

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,7 @@
 
 body {
   scroll-behavior: smooth;
+  overflow-y: scroll;
   overflow-x: hidden;
 }
 
@@ -49,6 +50,7 @@ body {
 }
 
 .navbar {
+  overflow-x: hidden;
   display: flex;
   position: absolute;
   top: 0;
@@ -169,7 +171,7 @@ body {
     .carousel__container .swiper {
       position: relative;
       width: 100%;
-      height: 50vh;
+      padding: 20px 0 20px 0px;
     }
     .carousel__container {
       position: relative;
@@ -433,7 +435,7 @@ body {
   }
   .carousel__container .swiper {
     width: 100%;
-    height: 50vh;
+    padding: 50px 0 50px 0px;
     position: relative;
   }
   .swiper {
@@ -821,6 +823,14 @@ footer {
   }
   .hero .hero__center .hero__center_title {
     font-size: 3rem;
+  }
+  .map
+    .map_container
+    .map__subsection
+    .map__left
+    .map__left_remote
+    .map__left_remote_bg {
+    min-height: 300px;
   }
 }
 
